# structura

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_and_run.sh  flake.nix  imgui.ini  shell.nix
editor/: CMakeLists.txt
editor/include/: test.h
editor/src/: main.cpp  test.cpp
engine/: CMakeLists.txt
engine/include/: window.hpp
engine/src/: engine.cpp  window.cpp
scripts/: build.sh  build_run.sh  clean_build.sh
